--- a/style.css
+++ b/style.css
@@ -312,6 +312,7 @@
     color: #f50066;
     width: 500px;
     height: 80px;
+    margin-bottom: 20px;
     text-align: center;
     display: flex;
     justify-content: center;
@@ -350,12 +351,12 @@
     transform: translate(-50%, -50%);
     font-size: 60px;
 }
-/* imagem */
+
 .imagem{
  
  max-width: 100%;
-width: 650px;
-height: 650px;
+width:  700px;
+height: 1000px;
 text-align: center;
 align-items: center;
 border-radius: 10px;
@@ -377,6 +378,7 @@ height: 100%;
 }
 
 .imagem::before
+
 .imagem::after {
 
 content: "";
@@ -408,4 +410,26 @@ border-width: 0 2px 2px 0;
 transform: scale(1.1);
 
 
+}
+
+.rodape {
+position: fixed;
+bottom: 0;
+left: 0;
+width: 100%;
+color: white;
+background-color: #800000;
+display: flex;
+align-items: center;
+justify-content: center;
+text-align: center;
+font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+font-size: 10px;
+font-weight: 400;
+padding: 20px;
+
+}
+
+.rodape a:hover {
+color: rgb(255, 238, 0);
 }
